[gd_scene load_steps=6 format=3 uid="uid://bqi4gdtsca047"]

[ext_resource type="Script" uid="uid://cvq4x3ca0fa80" path="res://001-game.gd" id="1_c8ncg"]

[sub_resource type="ProceduralSkyMaterial" id="ProceduralSkyMaterial_35f18"]
sky_horizon_color = Color(0.662243, 0.671743, 0.686743, 1)
ground_horizon_color = Color(0.662243, 0.671743, 0.686743, 1)

[sub_resource type="Sky" id="Sky_c8ncg"]
sky_material = SubResource("ProceduralSkyMaterial_35f18")

[sub_resource type="Environment" id="Environment_g60ht"]
background_mode = 2
sky = SubResource("Sky_c8ncg")
tonemap_mode = 2

[sub_resource type="SphereShape3D" id="SphereShape3D_35f18"]

[node name="root" type="Node3D"]
script = ExtResource("1_c8ncg")

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(-0.866025, -0.433013, 0.25, 0, 0.5, 0.866025, -0.5, 0.75, -0.433013, 0, 0, 0)
shadow_enabled = true

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_g60ht")

[node name="CSGBox3D" type="CSGBox3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.551171, -1.36364, -1.04077)
use_collision = true
size = Vector3(5.7851, 0.115356, 6.5542)

[node name="CSGBox3D" type="CSGBox3D" parent="CSGBox3D"]
transform = Transform3D(0.663796, -0.747914, 0, 0.747914, 0.663796, 0, 0, 0, 1, 2.79054, -0.125592, 0.0722048)
use_collision = true
size = Vector3(5.7851, 0.115356, 8.78015)

[node name="CSGBox3D" type="CSGBox3D" parent="CSGBox3D/CSGBox3D"]
transform = Transform3D(0.177909, -0.984047, 0, 0.984047, 0.177909, 0, 0, 0, 1, -3.24849, 4.43797, 0.0722048)
use_collision = true
size = Vector3(5.7851, 0.115356, 8.78015)

[node name="CSGBox3D" type="CSGBox3D" parent="CSGBox3D/CSGBox3D/CSGBox3D"]
transform = Transform3D(-0.391037, -0.682627, 0.617341, 0.260058, 0.561468, 0.785572, -0.88287, 0.467732, -0.0420327, -1.91287, -1.83045, 3.06464)
use_collision = true
size = Vector3(5.7851, 0.115356, 8.78015)

[node name="CSGBox3D" type="CSGBox3D" parent="CSGBox3D/CSGBox3D/CSGBox3D/CSGBox3D"]
transform = Transform3D(-0.179689, 0.979722, -0.0886386, 0.983712, 0.17851, -0.0211163, -0.00486541, -0.0909895, -0.995835, 5.86954, -3.15008, 0.968475)
use_collision = true
size = Vector3(5.7851, 0.115356, 13.6373)

[node name="TrackingCamera" type="Camera3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 2.43845)

[node name="RollyBall" type="RigidBody3D" parent="."]

[node name="CollisionShape3D" type="CollisionShape3D" parent="RollyBall"]
shape = SubResource("SphereShape3D_35f18")

[node name="CSGSphere3D" type="CSGSphere3D" parent="RollyBall"]

[connection signal="mouse_entered" from="RollyBall" to="." method="_on_rolly_ball_mouse_entered"]
[connection signal="mouse_exited" from="RollyBall" to="." method="_on_rolly_ball_mouse_exited"]
